pkg/xds/generator/testdata/zone-proxy-listener/egress-meshexternalservice-tcp.envoy.golden.yaml
resources:
- name: kri_extsvc_default___example_9000
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    connectTimeout: 5s
    loadAssignment:
      clusterName: kri_extsvc_default___example_9000
      endpoints:
      - lbEndpoints:
        - endpoint:
            address:
              socketAddress:
                address: 192.168.0.1
                portValue: 27017
          loadBalancingWeight: 1
    name: kri_extsvc_default___example_9000
    type: STATIC
- name: self_zoneegress_dp_zone-egress-port
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 10.0.0.1
        portValue: 10002
    enableReusePort: true
    filterChains:
    - filterChainMatch:
        serverNames:
        - sni.extsvc.default.example.9000
        transportProtocol: tls
      filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: kri_extsvc_default___example_9000
          statPrefix: kri_extsvc_default___example_9000
      name: kri_extsvc_default___example_9000
      transportSocket:
        name: envoy.transport_sockets.tls
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          commonTlsContext:
            combinedValidationContext:
              defaultValidationContext: {}
              validationContextSdsSecretConfig:
                name: system_trust_bundle
                sdsConfig:
                  ads: {}
                  resourceApiVersion: V3
            tlsCertificateSdsSecretConfigs:
            - name: my-identity-secret
              sdsConfig:
                ads: {}
                resourceApiVersion: V3
          requireClientCertificate: true
    listenerFilters:
    - name: envoy.filters.listener.tls_inspector
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
    name: self_zoneegress_dp_zone-egress-port
    statPrefix: self_zoneegress_dp_zone-egress-port
    trafficDirection: INBOUND
