pkg/xds/generator/testdata/zone-proxy-listener/egress-meshexternalservice-tls-custom.envoy.golden.yaml
resources:
- name: kri_extsvc_default___example_9000
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    connectTimeout: 5s
    dnsLookupFamily: V4_ONLY
    loadAssignment:
      clusterName: kri_extsvc_default___example_9000
      endpoints:
      - lbEndpoints:
        - endpoint:
            address:
              socketAddress:
                address: example.com
                portValue: 10000
          loadBalancingWeight: 1
    name: kri_extsvc_default___example_9000
    transportSocketMatches:
    - name: example.com
      transportSocket:
        name: envoy.transport_sockets.tls
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          commonTlsContext:
            tlsCertificates:
            - certificateChain:
                inlineBytes: Y2VydA==
              privateKey:
                inlineBytes: a2V5
            validationContext:
              matchTypedSubjectAltNames:
              - matcher:
                  exact: example2.com
                sanType: DNS
              - matcher:
                  exact: example2.com
                sanType: IP_ADDRESS
              - matcher:
                  prefix: example
                sanType: DNS
              - matcher:
                  exact: example2.com
                sanType: DNS
              - matcher:
                  prefix: example
                sanType: IP_ADDRESS
              - matcher:
                  exact: example2.com
                sanType: IP_ADDRESS
              trustedCa:
                inlineBytes: Y2E=
          sni: example2.com
    type: STRICT_DNS
    typedExtensionProtocolOptions:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicitHttpConfig:
          httpProtocolOptions: {}
- name: self_zoneegress_dp_zone-egress-port
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 10.0.0.1
        portValue: 10002
    enableReusePort: true
    filterChains:
    - filterChainMatch:
        serverNames:
        - sni.extsvc.default.example.9000
        transportProtocol: tls
      filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 100.64.0.0
              prefixLen: 16
          routeConfig:
            name: kri_extsvc_default___example_9000
            validateClusters: false
            virtualHosts:
            - domains:
              - '*'
              name: kri_extsvc_default___example_9000
              routes:
              - match:
                  prefix: /
                route:
                  autoHostRewrite: true
                  cluster: kri_extsvc_default___example_9000
                  timeout: 0s
          statPrefix: kri_extsvc_default___example_9000
      name: kri_extsvc_default___example_9000
      transportSocket:
        name: envoy.transport_sockets.tls
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          commonTlsContext:
            combinedValidationContext:
              defaultValidationContext: {}
              validationContextSdsSecretConfig:
                name: system_trust_bundle
                sdsConfig:
                  ads: {}
                  resourceApiVersion: V3
            tlsCertificateSdsSecretConfigs:
            - name: my-identity-secret
              sdsConfig:
                ads: {}
                resourceApiVersion: V3
          requireClientCertificate: true
    listenerFilters:
    - name: envoy.filters.listener.tls_inspector
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
    name: self_zoneegress_dp_zone-egress-port
    statPrefix: self_zoneegress_dp_zone-egress-port
    trafficDirection: INBOUND
