pkg/xds/generator/testdata/zone-proxy-listener/ingress-meshmultizoneservice.envoy.golden.yaml
resources:
- name: kri_mzsvc_default___global-svc_80
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    connectTimeout: 5s
    edsClusterConfig:
      edsConfig:
        ads: {}
        resourceApiVersion: V3
    name: kri_mzsvc_default___global-svc_80
    type: EDS
- name: kri_mzsvc_default___global-svc_80
  resource:
    '@type': type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment
    clusterName: kri_mzsvc_default___global-svc_80
    endpoints:
    - lbEndpoints:
      - endpoint:
          address:
            socketAddress:
              address: 192.168.0.1
              portValue: 8080
        loadBalancingWeight: 1
- name: self_zoneingress_dp_zone-ingress-port
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 10.0.0.1
        portValue: 10001
    enableReusePort: false
    filterChains:
    - filterChainMatch:
        serverNames:
        - sni.mzsvc.default.global-svc.80
        - a22ee69d8a791ea78.global-svc.80.default.mzms
        transportProtocol: tls
      filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: kri_mzsvc_default___global-svc_80
          statPrefix: kri_mzsvc_default___global-svc_80
    listenerFilters:
    - name: envoy.filters.listener.tls_inspector
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
    name: self_zoneingress_dp_zone-ingress-port
    statPrefix: self_zoneingress_dp_zone-ingress-port
    trafficDirection: INBOUND
