pkg/xds/generator/testdata/zone-proxy-listener/ingress-meshservice-filtered.envoy.golden.yaml
resources:
- name: kri_msvc_default_east__backend_80
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    connectTimeout: 5s
    edsClusterConfig:
      edsConfig:
        ads: {}
        resourceApiVersion: V3
    name: kri_msvc_default_east__backend_80
    type: EDS
- name: kri_msvc_default_east__backend_80
  resource:
    '@type': type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment
    clusterName: kri_msvc_default_east__backend_80
- name: self_zoneingress_dp_zone-ingress-port
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 10.0.0.1
        portValue: 10001
    enableReusePort: false
    filterChains:
    - filterChainMatch:
        serverNames:
        - sni.msvc.default.east.backend.80
        - a601e0c00295a9fbe.backend.80.default.ms
        transportProtocol: tls
      filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: kri_msvc_default_east__backend_80
          statPrefix: kri_msvc_default_east__backend_80
    listenerFilters:
    - name: envoy.filters.listener.tls_inspector
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
    name: self_zoneingress_dp_zone-ingress-port
    statPrefix: self_zoneingress_dp_zone-ingress-port
    trafficDirection: INBOUND
